[package]
name = "rusteroids"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.16.1" }
specs-derive = { version = "0.4.1" }

[dependencies.sdl2]
version = "0.32.1"
features = ["image","ttf"]